--- a/src/examples/html/example-markup.html
+++ b/src/examples/html/example-markup.html
@@ -1,1 +1,13 @@
-<div class="red">Just a div</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="container">
+      <div class="red">Just a div</div>
+    </div>
+  </body>
+</html>
