enabled multiple target occurences

--- a/src/examples/html/example-markup.html
+++ b/src/examples/html/example-markup.html
@@ -9,5 +9,10 @@
     <div id="container">
       <div class="red">Just a div</div>
     </div>
+    <ul>
+      <li>
+        <div class="red">Just another div</div>
+      </li>
+    </ul>
   </body>
 </html>
